# metachain-utils

./: .gitignore  MetaChain-Utils.sln  README.md
common/: ArgsManager.cpp  ArgsManager.h  logger.cpp  logger.h  utilstrencodings.cpp
keygenerator/: README.md  keygenerator.cpp  keygenerator.vcxproj  keygenerator.vcxproj.filters
keygenerator/src/: array_slice.h  base16.cpp  base16.h  collection.h  hash.cpp  hash.h  hmac_sha512.cpp  hmac_sha512.h  sha256.cpp  sha256.h  sha512.cpp  sha512.h  zeroize.cpp  zeroize.h
keygenerator/src/BIP39/: BIP39.cpp  BIP39.h  dictionairy.cpp  dictionairy.h
keygenerator/src/MCP01/: Account.cpp  Account.h  README.md
keygenerator/src/MCP39/: MCP39.cpp  MCP39.h  Mnemonic.cpp  README.md
sha3_test/: Makefile.am  Makefile.in  configure  configure.ac  sha3_test.cpp  sha3_test.filters  sha3_test.vcxproj  sha3_test.vcxproj.filters
sha3_test/src/: CHardwareRandomNumberGenerator.cpp  CHardwareRandomNumberGenerator.h  sha3.cpp
